syntax = "proto3";

package org.broadinstitute.workbench.protos;

// The cloud-cost-management service definition.
service Ccm {
  rpc getWorkflowCost (WorkflowCostRequest) returns (WorkflowCostResponse) {}
}

// The request message containing the user's name.
message WorkflowCostRequest {
  string id = 1;
}

// The response message containing the greetings
message WorkflowCostResponse {
  double cost = 1;
}

